--- a/posts.html
+++ b/posts.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript Test</title>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="src/style/style.css">
     <link rel="stylesheet" href="src/style/table.css">
 </head>
 <body>
+    <h1>Post List</h1>
     <main class="flex flex-col">
         <div class="px-3 pb-4">
             <input type="text" id="searchInput" 
