init unit test for reports page

--- a/posts-test.html
+++ b/posts-test.html
@@ -9,7 +9,7 @@
     <title>JavaScript Testing</title>
 </head>
 <body>
-    <h1>Basic Testing</h1>
+    <h1>Posts Testing</h1>
     <main class="flex flex-col" style="padding: 2rem;" id="test-results">
     </main>
     
@@ -22,12 +22,6 @@
 
         <div class="main-table flex-1">
             <table class="w-full" id="paginated-table">
-                <thead>
-                    <tr>
-                        <th style="width: 50px;">No</th>
-                        <th>Posts</th>
-                    </tr>
-                </thead>
                 <tbody id="table-body">
                 </tbody>
             </table>
